--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 </head>
 
 <body>
+    <div class="modal_background hide">
+        <div class="modal_body">
+            <h1>Game Won!!</h1>
+            <div class="modal_buttons">
+                <button class="modal_btn modal_cancel">Cancel</button>
+                <button class="modal_btn modal_retry">Retry</button>
+            </div>
+        </div>
+    </div>
+
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
